fix: content overflow

--- a/momentum/css/style.scss
+++ b/momentum/css/style.scss
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   outline: none;
-  transition: all 0.25s ease-in-out;
+  // transition: all 0.25s ease-in-out;
 }
 
 body {
@@ -19,7 +19,7 @@ body {
   opacity: 0;
   background-color: black;
 
-  transition: all 0.5s ease-in-out;
+  transition: background-image 0.5s, opacity 0.5s ease-in-out;
 
   .black {
     background: black;
@@ -31,14 +31,23 @@ body {
 
   .overlay {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    text-align: center;
+
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     width: 100%;
     height: 100vh;
+    transition: opacity 0.25s ease-in-out;
+    overflow: scroll;
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      margin: auto;
+      padding-bottom: 1vh;
+    }
   }
 }
 
@@ -106,7 +115,8 @@ h3 {
 
 .bg-btn {
   position: absolute;
-  top: 10px;
+  bottom: 10px;
+  right: 10px;
   width: 40px;
   height: 40px;
   border: 0;
@@ -129,7 +139,8 @@ h3 {
 
 .quote {
   position: relative;
-  min-height: 2rem;
+  display: flex;
+  flex-direction: column;
   font-size: 1.2rem;
   margin: 5px;
   background: rgba(255, 255, 255, 0.15);
@@ -158,13 +169,14 @@ h3 {
 
   .quote-btn {
     @extend .bg-btn;
-    margin: 0;
-    margin-bottom: 0.5em;
-    float: right;
-    position: relative;
-    display: flex;
-    align-content: right;
+    justify-self: right;
+    margin: 10px 0 0 0;
     width: 25px;
     height: 25px;
+
+    position: relative;
+    align-self: flex-end;
+    right: 0;
+    bottom: 0;
   }
 }
